Package_Tools/include-C/vips/h/almostdeprecated.h

/* Deprecated API.
 */
//xxxx VIPS_DEPRECATED_FOR(vips_error)
void im_errormsg(const char *fmt, ...)
;
//xxxx VIPS_DEPRECATED_FOR(vips_verror)
void im_verrormsg(const char *fmt, va_list ap);
//xxxx VIPS_DEPRECATED_FOR(vips_error_system)
void im_errormsg_system(int err, const char *fmt, ...)
;
//xxxx VIPS_DEPRECATED_FOR(g_info)
void im_diagnostics(const char *fmt, ...)
;
//xxxx VIPS_DEPRECATED_FOR(g_warning)
void im_warning(const char *fmt, ...)
;
//xxxx VIPS_DEPRECATED_FOR(g_thread_join)
void *vips_g_thread_join(GThread *thread);
//xxxx VIPS_DEPRECATED
int im_iterate(VipsImage *im,
	VipsStartFn start, im_generate_fn generate, VipsStopFn stop,
	void *a, void *b);
/* Async rendering.
 */
//xxxx VIPS_DEPRECATED_FOR(vips_sink_screen)
int im_render_priority(VipsImage *in, VipsImage *out, VipsImage *mask,
	int width, int height, int max,
	int priority,
	void (*notify)(VipsImage *, VipsRect *, void *), void *client);
//xxxx VIPS_DEPRECATED_FOR(vips_sink_screen)
int im_cache(VipsImage *in, VipsImage *out, int width, int height, int max);
/* Deprecated operations.
 */
//xxxx VIPS_DEPRECATED
int im_cmulnorm(IMAGE *in1, IMAGE *in2, IMAGE *out);
//xxxx VIPS_DEPRECATED
int im_fav4(IMAGE **, IMAGE *);
//xxxx VIPS_DEPRECATED
int im_gadd(double, IMAGE *, double, IMAGE *, double, IMAGE *);
//xxxx VIPS_DEPRECATED
int im_litecor(IMAGE *, IMAGE *, IMAGE *, int, double);
//xxxx VIPS_DEPRECATED_FOR(vips_sink_screen)
int im_render_fade(IMAGE *in, IMAGE *out, IMAGE *mask,
	int width, int height, int max,
	int fps, int steps,
	int priority,
	void (*notify)(IMAGE *, VipsRect *, void *), void *client);
//xxxx VIPS_DEPRECATED_FOR(vips_sink_screen)
int im_render(IMAGE *in, IMAGE *out, IMAGE *mask,
	int width, int height, int max,
	void (*notify)(IMAGE *, VipsRect *, void *), void *client);
//xxxx VIPS_DEPRECATED
int im_cooc_matrix(IMAGE *im, IMAGE *m,
	int xp, int yp, int xs, int ys, int dx, int dy, int flag);
//xxxx VIPS_DEPRECATED
int im_cooc_asm(IMAGE *m, double *asmoment);
//xxxx VIPS_DEPRECATED
int im_cooc_contrast(IMAGE *m, double *contrast);
//xxxx VIPS_DEPRECATED
int im_cooc_correlation(IMAGE *m, double *correlation);
//xxxx VIPS_DEPRECATED
int im_cooc_entropy(IMAGE *m, double *entropy);
//xxxx VIPS_DEPRECATED
int im_glds_matrix(IMAGE *im, IMAGE *m,
	int xpos, int ypos, int xsize, int ysize, int dx, int dy);
//xxxx VIPS_DEPRECATED
int im_glds_asm(IMAGE *m, double *asmoment);
//xxxx VIPS_DEPRECATED
int im_glds_contrast(IMAGE *m, double *contrast);
//xxxx VIPS_DEPRECATED
int im_glds_entropy(IMAGE *m, double *entropy);
//xxxx VIPS_DEPRECATED
int im_glds_mean(IMAGE *m, double *mean);
//xxxx VIPS_DEPRECATED
int im_dif_std(IMAGE *im, int xpos, int ypos, int xsize, int ysize, int dx, int dy, double *pmean, double *pstd);
//xxxx VIPS_DEPRECATED
int im_simcontr(IMAGE *out, int xsize, int ysize);
//xxxx VIPS_DEPRECATED
int im_spatres(IMAGE *in, IMAGE *out, int step);
//xxxx VIPS_DEPRECATED
int im_stretch3(IMAGE *in, IMAGE *out, double dx, double dy);
/* Renamed operations.
 */

/* arithmetic
 */
//xxxx VIPS_DEPRECATED_FOR(vips_remainder_const)
int im_remainderconst_vec(IMAGE *in, IMAGE *out, int n, double *c);
/* boolean
 */
//xxxx VIPS_DEPRECATED_FOR(vips_andimage_const1)
int im_andconst(IMAGE *, IMAGE *, double);
//xxxx VIPS_DEPRECATED_FOR(vips_andimage_const)
int im_and_vec(IMAGE *, IMAGE *, int, double *);
//xxxx VIPS_DEPRECATED_FOR(vips_orimage_const1)
int im_orconst(IMAGE *, IMAGE *, double);
//xxxx VIPS_DEPRECATED_FOR(vips_orimage_const)
int im_or_vec(IMAGE *, IMAGE *, int, double *);
//xxxx VIPS_DEPRECATED_FOR(vips_eorimage_const1)
int im_eorconst(IMAGE *, IMAGE *, double);
//xxxx VIPS_DEPRECATED_FOR(vips_eorimage_const)
int im_eor_vec(IMAGE *, IMAGE *, int, double *);
/* mosaicing
 */
//xxxx VIPS_DEPRECATED_FOR(vips_affine)
int im_affine(IMAGE *in, IMAGE *out,
	double a, double b, double c, double d, double dx, double dy,
	int ox, int oy, int ow, int oh);
//xxxx VIPS_DEPRECATED_FOR(vips_similarity)
int im_similarity(IMAGE *in, IMAGE *out,
	double a, double b, double dx, double dy);
//xxxx VIPS_DEPRECATED_FOR(vips_similarity)
int im_similarity_area(IMAGE *in, IMAGE *out,
	double a, double b, double dx, double dy,
	int ox, int oy, int ow, int oh);
/* colour
 */
//xxxx VIPS_DEPRECATED_FOR(vips_icc_export)
int im_icc_export(IMAGE *in, IMAGE *out,
	const char *output_profile_filename, int intent);
/* conversion
 */
//xxxx VIPS_DEPRECATED_FOR(vips_cast)
int im_clip2dcm(IMAGE *in, IMAGE *out);
//xxxx VIPS_DEPRECATED_FOR(vips_cast)
int im_clip2cm(IMAGE *in, IMAGE *out);
//xxxx VIPS_DEPRECATED_FOR(vips_cast)
int im_clip2us(IMAGE *in, IMAGE *out);
//xxxx VIPS_DEPRECATED_FOR(vips_cast)
int im_clip2ui(IMAGE *in, IMAGE *out);
//xxxx VIPS_DEPRECATED_FOR(vips_cast)
int im_clip2s(IMAGE *in, IMAGE *out);
//xxxx VIPS_DEPRECATED_FOR(vips_cast)
int im_clip2i(IMAGE *in, IMAGE *out);
//xxxx VIPS_DEPRECATED_FOR(vips_cast)
int im_clip2d(IMAGE *in, IMAGE *out);
//xxxx VIPS_DEPRECATED_FOR(vips_cast)
int im_clip2f(IMAGE *in, IMAGE *out);
//xxxx VIPS_DEPRECATED_FOR(vips_cast)
int im_clip2c(IMAGE *in, IMAGE *out);
//xxxx VIPS_DEPRECATED
int im_slice(IMAGE *in, IMAGE *out, double, double);
//xxxx VIPS_DEPRECATED
int im_thresh(IMAGE *in, IMAGE *out, double);
//xxxx VIPS_DEPRECATED_FOR(printf)
int im_print(const char *message);
//xxxx VIPS_DEPRECATED
int im_convsub(IMAGE *in, IMAGE *out, INTMASK *mask, int xskip, int yskip);
//xxxx VIPS_DEPRECATED
int im_bernd(const char *tiffname, int x, int y, int w, int h);
//xxxx VIPS_DEPRECATED
int im_resize_linear(IMAGE *, IMAGE *, int, int);
//xxxx VIPS_DEPRECATED_FOR(vips_convf)
int im_convf(IMAGE *in, IMAGE *out, DOUBLEMASK *mask);
//xxxx VIPS_DEPRECATED_FOR(vips_convsep)
int im_convsepf(IMAGE *in, IMAGE *out, DOUBLEMASK *mask);
//xxxx VIPS_DEPRECATED
int im_conv_raw(IMAGE *in, IMAGE *out, INTMASK *mask);
//xxxx VIPS_DEPRECATED
int im_convf_raw(IMAGE *in, IMAGE *out, DOUBLEMASK *mask);
//xxxx VIPS_DEPRECATED
int im_convsep_raw(IMAGE *in, IMAGE *out, INTMASK *mask);
//xxxx VIPS_DEPRECATED
int im_convsepf_raw(IMAGE *in, IMAGE *out, DOUBLEMASK *mask);
//xxxx VIPS_DEPRECATED
int im_fastcor_raw(IMAGE *in, IMAGE *ref, IMAGE *out);
//xxxx VIPS_DEPRECATED
int im_spcor_raw(IMAGE *in, IMAGE *ref, IMAGE *out);
//xxxx VIPS_DEPRECATED
int im_gradcor_raw(IMAGE *in, IMAGE *ref, IMAGE *out);
//xxxx VIPS_DEPRECATED
int im_contrast_surface_raw(IMAGE *in, IMAGE *out,
	int half_win_size, int spacing);
//xxxx VIPS_DEPRECATED_FOR(vips_stdif)
int im_stdif_raw(IMAGE *in, IMAGE *out,
	double a, double m0, double b, double s0, int xwin, int ywin);
//xxxx VIPS_DEPRECATED_FOR(vips_hist_local)
int im_lhisteq_raw(IMAGE *in, IMAGE *out, int xwin, int ywin);
//xxxx VIPS_DEPRECATED_FOR(vips_morph)
int im_erode_raw(IMAGE *in, IMAGE *out, INTMASK *m);
//xxxx VIPS_DEPRECATED_FOR(vips_morph)
int im_dilate_raw(IMAGE *in, IMAGE *out, INTMASK *m);
//xxxx VIPS_DEPRECATED
int im_rank_raw(IMAGE *in, IMAGE *out, int xsize, int ysize, int order);
/* inplace
 */
//xxxx VIPS_DEPRECATED_FOR(vips_draw_circle)
int im_circle(IMAGE *im, int cx, int cy, int radius, int intensity);
//xxxx VIPS_DEPRECATED_FOR(vips_draw_line1)
int im_line(IMAGE *, int, int, int, int, int);
//xxxx VIPS_DEPRECATED_FOR(vips_labelregions)
int im_segment(IMAGE *test, IMAGE *mask, int *segments);
//xxxx VIPS_DEPRECATED_FOR(vips_draw_rect)
int im_paintrect(IMAGE *im, VipsRect *r, PEL *ink);
//xxxx VIPS_DEPRECATED_FOR(vips_draw_image)
int im_insertplace(IMAGE *main, IMAGE *sub, int x, int y);
//xxxx VIPS_DEPRECATED_FOR(vips_draw_flood)
int im_flood_copy(IMAGE *in, IMAGE *out, int x, int y, PEL *ink);
//xxxx VIPS_DEPRECATED_FOR(vips_draw_flood)
int im_flood_blob_copy(IMAGE *in, IMAGE *out, int x, int y, PEL *ink);
//xxxx VIPS_DEPRECATED_FOR(vips_draw_flood)
int im_flood_other_copy(IMAGE *test, IMAGE *mark, IMAGE *out,
	int x, int y, int serial);
//xxxx VIPS_DEPRECATED_FOR(vips_draw_flood)
int im_flood(IMAGE *im, int x, int y, PEL *ink, VipsRect *dout);